service.yaml
apiVersion: v1
kind: Service
metadata:
  name: health-check-service
spec:
  selector:
    app: health-check-service
  ports:
  - port: 80
    targetPort: 8000
  type: NodePort
