ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: health-check-ingress
  namespace: default
  annotations:
#    nginx.ingress.kubernetes.io/use-regex: "true"  # Разрешаем использовать регулярные выражения в путях
    nginx.ingress.kubernetes.io/rewrite-target: /health  # Переписываем путь для правильного направления трафика
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          # Маршрутизация для "/health"
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: health-check-service
                port:
                  number: 80
          # Перенаправление /otus/sinyagindv/health на /health
          - path: /otus/sinyagindv/health
            pathType: Prefix
            backend:
              service:
                name: health-check-service
                port:
                  number: 80
